2006-01-28 Added MaxNLocator to ticker.py, and changed contour.py to
           use it by default. - EF

2006-01-28 Added fontcmd to backend_ps's RendererPS.draw_tex, to support other
           font families in eps output - DSD

2006-01-27 Buffered reading of matplotlibrc parameters in order to allow
           'verbose' settings to be processed first (allows verbose.report
           during rc validation process) - DSD

2006-01-27 Removed setuptools support from setup.py and created a
           separate setupegg.py file to replace it. - CM

2006-01-26 Replaced the ugly datapath logic with a cleaner approach from
           http://wiki.python.org/moin/DistutilsInstallDataScattered.
           Overrides the install_data command. - CM

2006-01-24 Don't use character typecodes in cntr.c --- changed to use
           defined typenumbers instead. - TEO

2006-01-24 Fixed some bugs in usetex's and ps.usedistiller's dependency

2006-01-24 Added masked array support to scatter - EF

2006-01-24 Fixed some bugs in usetex's and ps.usedistiller's dependency
           checking - DSD

===============================================================
2006-01-24 Released 0.86.2

2006-01-20 Added a converters dict to pylab load to convert selected
           coloumns to float -- especially useful for files with date
           strings, uses a datestr2num converter - JDH

2006-01-20 Added datestr2num to matplotlib dates to convert a string
           or sequence of strings to a matplotlib datenum

2006-01-18 Added quadrilateral pcolormesh patch 1409190 by Alex Mont
           and Paul Kienzle -- this is *Agg only for now.  See
           examples/quadmesh_demo.py - JDH

2006-01-18 Added Jouni's boxplot patch - JDH

2006-01-18 Added comma delimiter for pylab save - JDH

2006-01-12 Added Ryan's legend patch - JDH


2006-1-12 Fixed numpy / numeric to use .dtype.char to keep in SYNC with numpy SVN

===============================================================
2006-1-11 Released 0.86.1