@@ -130,8 +130,8 @@ if __name__ == '__main__':
     # backends = ['Agg', 'Cairo', 'GDK', 'PS', 'SVG', 'Template']
     #backends = ['Agg', 'PS', 'SVG', 'Template']
     # backends = [ 'GTK', 'WX', 'TkAgg']
-    #backends = ['Agg', 'PS', 'SVG', 'Template']
-    backends = ['Agg']
+    backends = ['Agg', 'PS', 'SVG', 'Template']
+    #backends = ['Agg']
     python = 'python2.4'
     for backend in backends:
         print 'testing %s' % backend
